--- a/Semana1/Ago6_2.ipynb
+++ b/Semana1/Ago6_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMU6ibHYkJi/cKicrAdZY97",
+      "authorship_tag": "ABX9TyPgyxVfjZvzqmCKVefIFhVC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "C4beYH16ZMBB"
+        "id": "C4beYH16ZMBB",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "624a407d-bf94-4242-9de4-fd3e347bee13"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-1697597801.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1697597801.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Segundo cuaderno\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "Segundo cuaderno"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Prueba de cuaderno\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EHzY731eboTJ",
+        "outputId": "882bcb8f-75f5-4b53-c62c-b63fe31b916b"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prueba de cuaderno\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "H0AzuRbvb5JI"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
